force-app/main/default/objects/Reference_CTT__c/Reference_CTT__c.object-meta.xml
<CustomObject>
    <label>Reference SST</label>
    <nameField>
        <displayFormat>SST-{000000}</displayFormat>
        <label>SST Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference SST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>