force-app/main/default/objects/Reference_CTT__c/fields/Accuracy_Comments_Log__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Comments_Log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accuracy Comments Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>