force-app/main/default/objects/Reference_CTT__c/fields/Check_Signing_Received__c.field-meta.xml
<CustomField>
    <fullName>Check_Signing_Received__c</fullName>
    <label>Check Signing Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>