force-app/main/default/objects/Reference_CTT__c/fields/Client_Profile_Incomplete_or_Missing__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile_Incomplete_or_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Profile Incomplete or Missing</label>
    <type>Checkbox</type>
</CustomField>