force-app/main/default/objects/Reference_CTT__c/fields/Current_Q_or_prior_Q_YTD_totals_by_emp__c.field-meta.xml
<CustomField>
    <fullName>Current_Q_or_prior_Q_YTD_totals_by_emp__c</fullName>
    <label>Current Q or prior Q YTD totals by emp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>