force-app/main/default/objects/Reference_CTT__c/fields/Fed_Doc_Missing__c.field-meta.xml
<CustomField>
    <fullName>Fed_Doc_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fed Doc Missing</label>
    <type>Checkbox</type>
</CustomField>