force-app/main/default/objects/Reference_CTT__c/fields/Fed_doc_Received_on_Submit__c.field-meta.xml
<CustomField>
    <fullName>Fed_doc_Received_on_Submit__c</fullName>
    <label>Fed doc Received on Submit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>