force-app/main/default/objects/Reference_CTT__c/fields/Is_an_ASO_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_an_ASO_Deal__c</fullName>
    <label>Is an ASO Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>