force-app/main/default/objects/Reference_CTT__c/fields/Number_of_Ids__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ids__c</fullName>
    <label>Number of Ids</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>