force-app/main/default/objects/Reference_CTT__c/fields/Onboarding_Tool__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Tool</label>
    <referenceTo>Onboarding_Tool__c</referenceTo>
    <relationshipName>Reference_CTT</relationshipName>
    <type>Lookup</type>
</CustomField>