force-app/main/default/objects/Reference_CTT__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Reference_CTT</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>