force-app/main/default/objects/Reference_CTT__c/fields/Other_Missing__c.field-meta.xml
<CustomField>
    <fullName>Other_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Missing</label>
    <type>Checkbox</type>
</CustomField>