force-app/main/default/objects/Reference_CTT__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>