force-app/main/default/objects/Reference_CTT__c/fields/PAID_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>PAID_Form_Received__c</fullName>
    <label>PAID Form Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>