force-app/main/default/objects/Reference_CTT__c/fields/Payroll_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Status__c</fullName>
    <description>Used to record the status of the payroll portion of hybrid sales.</description>
    <label>Payroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to CTT</fullName>
            </value>
            <value>
                <fullName>Sales Action Required</fullName>
            </value>
            <value>
                <fullName>Returned to Sales</fullName>
            </value>
            <value>
                <fullName>Waiting on client</fullName>
            </value>
            <value>
                <fullName>Sales Action Required / Unresponsive</fullName>
            </value>
            <value>
                <fullName>Returned to Sales - Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Submitted to Service</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Received</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Resolved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>