force-app/main/default/objects/Reference_CTT__c/fields/Prior_Plan_Adoption_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Prior_Plan_Adoption_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Plan Adoption Agreement</label>
    <type>Checkbox</type>
</CustomField>