force-app/main/default/objects/Reference_CTT__c/fields/Prospect_Client__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect-Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reference_CTT</relationshipName>
    <type>Lookup</type>
</CustomField>