force-app/main/default/objects/Reference_CTT__c/fields/Ready_to_be_Worked__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_be_Worked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will only be checked if the Client Profile has been submitted and either has no children, or if all the children have also been submitted.</description>
    <inlineHelpText>Will only be checked if the Client Profile has been submitted and either has no children, or if all the children have also been submitted.</inlineHelpText>
    <label>Ready to be Worked</label>
    <type>Checkbox</type>
</CustomField>