force-app/main/default/objects/Reference_CTT__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of Rep assigned to Opportunity</description>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_CTT2</relationshipName>
    <type>Lookup</type>
</CustomField>