force-app/main/default/objects/Reference_CTT__c/fields/Sign_Quote_or_Fee_Schedule_Missing__c.field-meta.xml
<CustomField>
    <fullName>Sign_Quote_or_Fee_Schedule_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign Quote or Fee Schedule Missing</label>
    <type>Checkbox</type>
</CustomField>