force-app/main/default/objects/Reference_CTT__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to CTT</fullName>
            </value>
            <value>
                <fullName>Sales Action Required</fullName>
            </value>
            <value>
                <fullName>Returned to Sales - Sales Requirements Not Met</fullName>
            </value>
            <value>
                <fullName>Waiting on client</fullName>
            </value>
            <value>
                <fullName>Sales Action Required/Unresponsive</fullName>
            </value>
            <value>
                <fullName>Returned to Sales-Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Submitted to Service</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Received</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Resolved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>