force-app/main/default/objects/Reference_CTT__c/validationRules/Other_Missing_Other_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Missing_Other_Reason</fullName>
    <active>true</active>
    <description>If the Other Missing checkbox is selected, a reason must be entered into Other Reason field.</description>
    <errorConditionFormula>AND(Other_Missing__c = TRUE, ISBLANK( Other_Reason__c ))</errorConditionFormula>
    <errorMessage>The &apos;Other Reason&apos; field must be filled out if &apos;Other Missing&apos; is selected.</errorMessage>
</ValidationRule>