force-app/main/default/objects/Reference_CTT__c/listViews/Client_Transition_Virtual_Queue.listView-meta.xml
<ListView>
    <fullName>Client_Transition_Virtual_Queue</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Comments_Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Client Transition Virtual</value>
    </filters>
    <label>Client Transition Virtual Queue</label>
</ListView>