force-app/main/default/objects/Reference_CTT__c/listViews/NCP_PACO_Submission_Team_Reference_CTT.listView-meta.xml
<ListView>
    <fullName>NCP_PACO_Submission_Team_Reference_CTT</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Ids__c</columns>
    <columns>Ready_to_be_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Client Transition MMS</label>
    <queue>NCP_PACO_Submission_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>