force-app/main/default/objects/Reference_CTT__c/listViews/Reference_CTT.listView-meta.xml
<ListView>
    <fullName>Reference_CTT</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Comments_Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reference CTT</label>
    <sharedTo>
        <roleAndSubordinates>MMSVP</roleAndSubordinates>
        <roleAndSubordinates>SeniorVPSales</roleAndSubordinates>
    </sharedTo>
</ListView>