force-app/main/default/objects/Reference_CTT__c/listViews/Reference_CTT_Open.listView-meta.xml
<ListView>
    <fullName>Reference_CTT_Open</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Comments_Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to CTT,Waiting on client,Unresponsive,Discrepancy - Received</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>kate loughman,brittney joyner,jess hermiller,keri levecchia,katherin veras-bounmala,carol boeckman,stephanie hays,matthew rugen</value>
    </filters>
    <label>SMB Reference CTT - Open</label>
    <sharedTo>
        <roleAndSubordinates>MMSVP</roleAndSubordinates>
        <roleAndSubordinates>SeniorVPSales</roleAndSubordinates>
    </sharedTo>
</ListView>