force-app/main/default/objects/Reference_CTT__c/listViews/Strategic_Sales.listView-meta.xml
<ListView>
    <fullName>Strategic_Sales</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Ids__c</columns>
    <columns>Ready_to_be_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to CTT</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Marcy Alfrejd,Casey Parrish,Caroline Hughes,Gary Adams,Jenny Blake,Jennifer Hepler,Matthew DeSimone,John-Michael Cabot,Eric Bouchard,Ezekiel Roberts,Matthew Rugen,Frank Valente,Natasha Schickler,Mary Meloy,Kyle Lukeski,Katie Difondi</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>Rugen</value>
    </filters>
    <label>Matt Rugen</label>
</ListView>