force-app/main/default/objects/Reference_CTT__c/listViews/Submitted_to_CTT.listView-meta.xml
<ListView>
    <fullName>Submitted_to_CTT</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Ids__c</columns>
    <columns>Ready_to_be_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to CTT</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>Client</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notContain</operation>
        <value>MMS</value>
    </filters>
    <label>Submitted to CTT</label>
</ListView>