force-app/main/default/objects/Reference_CTT__c/listViews/Submitted_to_CTT_Assigned.listView-meta.xml
<ListView>
    <fullName>Submitted_to_CTT_Assigned</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to CTT</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>her,rug,joy,leve,thom,nol</value>
    </filters>
    <label>Submitted to CTT, Assigned</label>
</ListView>